Added Play Store link, etc...

--- a/wear/src/main/res/layout/rect_activity_wear_slides.xml
+++ b/wear/src/main/res/layout/rect_activity_wear_slides.xml
@@ -34,4 +34,14 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_toEndOf="@+id/imageButton2" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="AMBIENT MODE\nTAP TO WAKE"
+        android:id="@+id/ambient"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:visibility="invisible" />
 </RelativeLayout>
