--- a/mobile/src/main/res/layout/content_phone.xml
+++ b/mobile/src/main/res/layout/content_phone.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,19 +9,33 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.chernowii.wearslides.PhoneActivity"
-    tools:showIn="@layout/activity_phone">
+    tools:context="com.chernowii.wearslides.PhoneActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enter the IP Address of the host computer (tip: ipconfig for Windows or hostname -I for Linux)" />
+        android:text="Enter the IP Address of the host computer (tip: ipconfig for Windows or hostname -I for Linux)"
+        android:id="@+id/textView" />
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="IP Address"/>
+        android:id="@+id/ipbox"
+        android:hint="IP Address"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/setip" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Set IP Address"/>
-</LinearLayout>
+        android:id="@+id/setip"
+        android:text="Set IP Address"
+        android:layout_below="@+id/textView"
+        android:layout_alignEnd="@+id/textView" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Remember that you need to have the webserver running on the computer, go to http://github.com/KonradIT/WearSlides to download it and configure it."
+        android:layout_below="@+id/ipbox"
+        android:layout_alignParentStart="true" />
+</RelativeLayout>
+
