Pushed commits of update 1.4

--- a/wear/src/main/res/layout/round_activity_wear_slides.xml
+++ b/wear/src/main/res/layout/round_activity_wear_slides.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/imageButton2"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentTop="true" />
+        android:layout_below="@+id/timer" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -29,10 +29,10 @@
         android:layout_height="match_parent"
         android:id="@+id/next"
         android:src="@android:drawable/ic_media_ff"
-        android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/imageButton2" />
+        android:layout_toEndOf="@+id/imageButton2"
+        android:layout_below="@+id/timer" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -40,7 +40,18 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="AMBIENT MODE\nTAP TO WAKE"
         android:id="@+id/ambient"
+        android:visibility="invisible"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="  Click to start timer"
+        android:id="@+id/timer"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:visibility="invisible" />
+        android:layout_marginTop="19dp"
+        android:layout_alignStart="@+id/ambient"
+        android:layout_alignEnd="@+id/ambient" />
 </RelativeLayout>
