--- a/wear/src/main/res/layout/rect_activity_wear_slides.xml
+++ b/wear/src/main/res/layout/rect_activity_wear_slides.xml
@@ -13,9 +13,9 @@
         android:id="@+id/prev"
         android:src="@android:drawable/ic_media_rew"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_toStartOf="@+id/imageButton2"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/timer" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -30,10 +30,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/next"
         android:src="@android:drawable/ic_media_ff"
-        android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/imageButton2" />
+        android:layout_toEndOf="@+id/imageButton2"
+        android:layout_below="@+id/timer" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -41,7 +41,16 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="AMBIENT MODE\nTAP TO WAKE"
         android:id="@+id/ambient"
+        android:visibility="invisible"
+        android:layout_below="@+id/timer"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Click to start timer"
+        android:id="@+id/timer"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:visibility="invisible" />
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
